--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -348,6 +348,8 @@
     <string name="accessibility_switch_to_panorama">Switch to panorama</string>
     <!-- The button to switch to new Panorama mode. [CHAR LIMIT = NONE] -->
     <string name="accessibility_switch_to_new_panorama">Switch to new panorama</string>
+    <!-- The button to switch to the Gallery. [CHAR LIMIT = NONE] -->
+    <string name="accessibility_switch_to_gallery">Switch to gallery</string>
     <!-- The button in review mode indicating that the photo taking, video recording, and panorama saving session should be canceled [CHAR LIMIT = NONE] -->
     <string name="accessibility_review_cancel">Review cancel</string>
     <!-- The button in review mode indicating that the taken photo/video is OK to be attached/uploaded [CHAR LIMIT = NONE] -->
@@ -530,5 +532,18 @@ CHAR LIMIT = NONE] -->
     <string name="pref_camera_burst_entry_10">10 shots</string>
     <string name="pref_camera_burst_entry_15">15 shots</string>
     <string name="pref_camera_burst_entry_20">20 shots</string>
+
+    <!-- Touch-to-focus duration settings -->
+    <string name="pref_camera_focustime_title">Touch focus duration</string>
+    <string name="pref_camera_focustime_summary">Select duration for touch focus</string>
+    <string name="pref_camera_focustime_default" translatable="false">5000</string>
+
+    <!-- Settings screen, Timer mode entries -->
+    <string name="pref_camera_focustime_entry_5">5s</string>
+    <string name="pref_camera_focustime_entry_10">10s</string>
+    <string name="pref_camera_focustime_entry_15">15s</string>
+    <string name="pref_camera_focustime_entry_20">20s</string>
+    <string name="pref_camera_focustime_entry_30">30s</string>
+    <string name="pref_camera_focustime_entry_infinite">Infinite</string>
 
 </resources>
