--- a/res/values-zh-rCN/strings.xml
+++ b/res/values-zh-rCN/strings.xml
@@ -44,9 +44,15 @@
     <string name="pref_camera_settings_category" msgid="2576236450859613120">"相机设置"</string>
     <string name="pref_camcorder_settings_category" msgid="460313486231965141">"摄像机设置"</string>
     <string name="pref_camera_picturesize_title" msgid="4333724936665883006">"照片大小"</string>
+    <string name="pref_camera_picturesize_entry_13mp">1300 万像素</string>
+    <string name="pref_camera_picturesize_entry_11_5mp">1150 万像素</string>
+    <string name="pref_camera_picturesize_entry_9mp">“900 万像素“</string>
     <string name="pref_camera_picturesize_entry_8mp" msgid="259953780932849079">"800 万像素"</string>
+    <string name="pref_camera_picturesize_entry_6_4mp">640 万像素</string>
     <string name="pref_camera_picturesize_entry_5mp" msgid="2882928212030661159">"500 万像素"</string>
     <string name="pref_camera_picturesize_entry_3mp" msgid="741415860337400696">"300 万像素"</string>
+    <string name="pref_camera_picturesize_entry_2_5mp">250 万像素</string>
+    <string name="pref_camera_picturesize_entry_2_1mp">210 万像素</string>
     <string name="pref_camera_picturesize_entry_2mp" msgid="1753709802245460393">"200 万像素"</string>
     <string name="pref_camera_picturesize_entry_1_3mp" msgid="829109608140747258">"130 万像素"</string>
     <string name="pref_camera_picturesize_entry_1mp" msgid="1669725616780375066">"100 万像素"</string>
@@ -71,8 +77,36 @@
     <string name="pref_camera_scenemode_entry_hdr" msgid="2923388802899511784">"HDR"</string>
     <string name="pref_camera_scenemode_entry_action" msgid="616748587566110484">"运动"</string>
     <string name="pref_camera_scenemode_entry_night" msgid="7606898503102476329">"夜景"</string>
+    <string name="pref_camera_scenemode_entry_nightportrait">夜间人像</string>
+    <string name="pref_camera_scenemode_entry_nightindoor">夜间室内</string>
+    <string name="pref_camera_scenemode_entry_supernight">漆黑深夜</string>
     <string name="pref_camera_scenemode_entry_sunset" msgid="181661154611507212">"日落"</string>
     <string name="pref_camera_scenemode_entry_party" msgid="907053529286788253">"派对"</string>
+    <string name="pref_camera_scenemode_entry_duskdawn">微光</string>
+    <string name="pref_camera_scenemode_entry_candlelight">烛光</string>
+    <string name="pref_camera_scenemode_entry_fallcolor">秋意</string>
+    <string name="pref_camera_scenemode_entry_closeup">微距</string>
+    <string name="pref_camera_scenemode_entry_landscape">风景</string>
+    <string name="pref_camera_scenemode_entry_aqua">水底</string>
+    <string name="pref_camera_scenemode_entry_sports">体育运动</string>
+    <string name="pref_camera_scenemode_entry_mood">意境</string>
+    <string name="pref_camera_scenemode_entry_fireworks">烟火</string>
+    <string name="pref_camera_scenemode_entry_cine">影院</string>
+    <string name="pref_camera_scenemode_entry_oldfilm">老电影</string>
+    <string name="pref_camera_scenemode_entry_beach">海滩</string>
+    <string name="pref_camera_scenemode_entry_portrait">人像</string>
+    <string name="pref_camera_scenemode_entry_snow">雪景</string>
+    <string name="pref_camera_scenemode_entry_steadyphoto">稳定图像</string>
+    <string name="pref_camera_scenemode_entry_theatre">剧场</string>
+    <string name="pref_camera_scenemode_entry_backlight">逆光</string>
+    <string name="pref_camera_scenemode_entry_backlightportrait">逆光人像</string>
+    <string name="pref_camera_scenemode_entry_document">文档</string>
+    <string name="pref_camera_scenemode_entry_barcode">条码</string>
+    <string name="pref_camera_scenemode_entry_text">文本</string>
+    <string name="pref_camera_scenemode_entry_beauty">美肤</string>
+    <string name="pref_camera_scenemode_entry_flowers">花朵</string>
+    <string name="pref_camera_scenemode_entry_whiteboard">白板</string>
+    <string name="pref_camera_scenemode_entry_backgroundblur">背景模糊</string>
     <string name="not_selectable_in_scene_mode" msgid="2970291701448555126">"无法在取景模式下选择。"</string>
     <string name="pref_exposure_title" msgid="1229093066434614811">"曝光"</string>
     <!-- no translation found for pref_camera_hdr_default (1336869406134365882) -->
@@ -122,6 +156,7 @@
     <string name="accessibility_switch_to_video" msgid="4991396355234561505">"切换到视频模式"</string>
     <string name="accessibility_switch_to_panorama" msgid="604756878371875836">"切换到全景模式"</string>
     <string name="accessibility_switch_to_new_panorama" msgid="8116783308051524188">"切换到新的全景模式"</string>
+    <string name="accessibility_switch_to_gallery">切换到图库</string>
     <string name="accessibility_review_cancel" msgid="9070531914908644686">"取消"</string>
     <string name="accessibility_review_ok" msgid="7793302834271343168">"完成"</string>
     <string name="accessibility_review_retake" msgid="659300290054705484">"重拍"</string>
@@ -216,10 +251,25 @@
     <!-- Settings screen, Burst mode title -->
     <string name="pref_camera_burst_title">连拍模式</string>
 
+
     <!-- Settings screen, Burst mode entries -->
     <string name="pref_camera_burst_entry_off">关闭</string>
     <string name="pref_camera_burst_entry_5">5 连拍</string>
     <string name="pref_camera_burst_entry_10">10 连拍</string>
     <string name="pref_camera_burst_entry_15">15 连拍</string>
     <string name="pref_camera_burst_entry_20">20 连拍</string>
+
+    <!-- Touch-to-focus duration settings -->
+    <string name="pref_camera_focustime_title">触摸对焦持续时间</string>
+    <string name="pref_camera_focustime_summary">为触摸对焦选择持续时间</string>
+
+
+    <!-- Settings screen, Timer mode entries -->
+    <string name="pref_camera_focustime_entry_5">5秒</string>
+    <string name="pref_camera_focustime_entry_10">10秒</string>
+    <string name="pref_camera_focustime_entry_15">15秒</string>
+    <string name="pref_camera_focustime_entry_20">20秒</string>
+    <string name="pref_camera_focustime_entry_30">30秒</string>
+    <string name="pref_camera_focustime_entry_infinite">无限</string>
+
 </resources>
