--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -109,21 +109,48 @@
     <!-- Settings screen, Camcorder setting category title -->
     <string name="pref_camcorder_settings_category">Camcorder settings</string>
 
+    <!-- More Settings screen, storage title -->
+    <string name="pref_camera_storage_title">Storage</string>
+
     <!-- Settings screen, Picture size title -->
     <string name="pref_camera_picturesize_title">Picture size</string>
 
+    <!-- Settings screen, dialog choice for 13 megapixels picture size [CHAR LIMIT=15] -->
+    <string name="pref_camera_picturesize_entry_13mp">13M pixels</string>
+    <!-- Settings screen, dialog choice for 12.8 megapixels picture size [CHAR LIMIT=15] -->
+    <string name="pref_camera_picturesize_entry_12_8mp">12.8M pixels</string>
+    <!-- Settings screen, dialog choice for 11.5 megapixels picture size [CHAR LIMIT=15] -->
+    <string name="pref_camera_picturesize_entry_11_5mp">11.5M pixels</string>
+    <!-- Settings screen, dialog choice for 9 megapixels picture size [CHAR LIMIT=15] -->
+    <string name="pref_camera_picturesize_entry_9mp">9M pixels</string>
     <!-- Settings screen, dialog choice for 8 megapixels picture size [CHAR LIMIT=15] -->
     <string name="pref_camera_picturesize_entry_8mp">8M pixels</string>
+    <!-- Settings screen, dialog choice for 6.4 megapixels picture size [CHAR LIMIT=15] -->
+    <string name="pref_camera_picturesize_entry_6_4mp">6.4M pixels</string>
     <!-- Settings screen, dialog choice for 5 megapixels picture size [CHAR LIMIT=15] -->
     <string name="pref_camera_picturesize_entry_5mp">5M pixels</string>
+    <!-- Settings screen, dialog choice for 4 megapixels picture size [CHAR LIMIT=15] -->
+    <string name="pref_camera_picturesize_entry_4mp">4M pixels</string>
     <!-- Settings screen, dialog choice for 3 megapixels picture size [CHAR LIMIT=15] -->
     <string name="pref_camera_picturesize_entry_3mp">3M pixels</string>
+    <!-- Settings screen, dialog choice for 2.5 megapixels picture size [CHAR LIMIT=15] -->
+    <string name="pref_camera_picturesize_entry_2_5mp">2.5M pixels</string>
+    <!-- Settings screen, dialog choice for 2.1 megapixels picture size [CHAR LIMIT=15] -->
+    <string name="pref_camera_picturesize_entry_2_1mp">2.1M pixels</string>
     <!-- Settings screen, dialog choice for 2 megapixels picture size [CHAR LIMIT=15] -->
     <string name="pref_camera_picturesize_entry_2mp">2M pixels</string>
+    <!-- Settings screen, dialog choice for 1.5 megapixels picture size [CHAR LIMIT=15] -->
+    <string name="pref_camera_picturesize_entry_1_5mp">1.5M pixels</string>
     <!-- Settings screen, dialog choice for 1.3 megapixels picture size [CHAR LIMIT=15] -->
     <string name="pref_camera_picturesize_entry_1_3mp">1.3M pixels</string>
     <!-- Settings screen, dialog choice for 1 megapixels picture size [CHAR LIMIT=15] -->
     <string name="pref_camera_picturesize_entry_1mp">1M pixels</string>
+    <!-- Settings screen, dialog choice for XGA picture size [CHAR LIMIT=15] -->
+    <string name="pref_camera_picturesize_entry_xga">XGA</string>
+    <!-- Settings screen, dialog choice for SVGA picture size [CHAR LIMIT=15] -->
+    <string name="pref_camera_picturesize_entry_svga">SVGA</string>
+    <!-- Settings screen, dialog choice for WVGA picture size [CHAR LIMIT=15] -->
+    <string name="pref_camera_picturesize_entry_wvga">WVGA</string>
     <!-- Settings screen, dialog choice for VGA picture size [CHAR LIMIT=15] -->
     <string name="pref_camera_picturesize_entry_vga">VGA</string>
     <!-- Settings screen, dialog choice for QVGA picture size [CHAR LIMIT=15] -->
@@ -135,6 +162,7 @@
     <!-- Settings screen, Focus mode dialog radio button choices -->
     <string name="pref_camera_focusmode_entry_auto">Auto</string>
     <string name="pref_camera_focusmode_entry_continuouspicture">Continuous Picture</string>
+    <string name="pref_camera_focusmode_entry_continuousvideo">Continuous Video</string>
     <string name="pref_camera_focusmode_entry_extended">Extended</string>
     <string name="pref_camera_focusmode_entry_facedetect">Face detect</string>
     <string name="pref_camera_focusmode_entry_facepriority">Face priority</string>
@@ -142,6 +170,7 @@
     <string name="pref_camera_focusmode_entry_infinity">Infinity</string>
     <string name="pref_camera_focusmode_entry_macro">Macro</string>
     <string name="pref_camera_focusmode_entry_portrait">Portrait</string>
+    <string name="pref_camera_focusmode_entry_hyperfocal">Hyperfocal</string>
 
     <!-- Default flash mode setting.-->
     <string name="pref_camera_flashmode_default" translatable="false">auto</string>
@@ -211,9 +240,14 @@
     <string name="pref_camera_scenemode_entry_steadyphoto">Steadyphoto</string>
     <string name="pref_camera_scenemode_entry_theatre">Theatre</string>
     <string name="pref_camera_scenemode_entry_backlight">Backlight</string>
+    <string name="pref_camera_scenemode_entry_backlightportrait">Backlight portrait</string>
     <string name="pref_camera_scenemode_entry_document">Document</string>
     <string name="pref_camera_scenemode_entry_barcode">Barcode</string>
     <string name="pref_camera_scenemode_entry_text">Text</string>
+    <string name="pref_camera_scenemode_entry_beauty">Beauty</string>
+    <string name="pref_camera_scenemode_entry_flowers">Flowers</string>
+    <string name="pref_camera_scenemode_entry_whiteboard">Whiteboard</string>
+    <string name="pref_camera_scenemode_entry_backgroundblur">Background blur</string>
 
     <!-- Toast after trying to select a setting that is not allowed to change in scene mode [CHAR LIMIT=NONE] -->
     <string name="not_selectable_in_scene_mode">Not selectable in scene mode.</string>
@@ -545,5 +579,24 @@ CHAR LIMIT = NONE] -->
     <string name="pref_camera_focustime_entry_20">20s</string>
     <string name="pref_camera_focustime_entry_30">30s</string>
     <string name="pref_camera_focustime_entry_infinite">Infinite</string>
+
+    <string name="pref_camera_nohands_title">Hands-free shutter</string>
+    <string name="pref_camera_nohands_voice" translatable="false">voice</string>
+    <string name="pref_camera_nohands_default" translatable="false">0</string>
+
+    <!-- Settings screen, Timer mode entries -->
+    <string name="pref_camera_timer_entry_0">Off</string>
+    <string name="pref_camera_timer_entry_10">10s</string>
+    <string name="pref_camera_timer_entry_20">20s</string>
+    <string name="pref_camera_timer_entry_30">30s</string>
+    <string name="pref_camera_timer_entry_40">40s</string>
+    <string name="pref_camera_timer_entry_50">50s</string>
+    <string name="pref_camera_timer_entry_60">60s</string>
+
+    <string name="voice_hint">Snap a photo from a distance by saying a trigger word: You can use \'Click\', \'Snap\', and of course \'Sourcery!\'</string>
+
+    <!-- Persistent remote shutter -->
+    <string name="pref_nohands_persistent_title">Persistent handsfree</string>
+    <string name="pref_nohands_persistent_default">@string/setting_off_value</string>
 
 </resources>
